crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__binop_greater_than_or_equal.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "Code:\n\na >= b"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: BinOps {
        operands: [
            BinOpOperand {
                expr: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 2,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "a",
                    },
                },
                op: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: ">=",
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var {
                kind: LowVar,
                name: "b",
            },
        },
    },
}
